令插件模板兼容 jdk15